update template